--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -105,7 +105,7 @@ jobs:
           toolchain: stable
 
       - name: Format
-        run: ./bin/format_exercises
+        run: ./bin/format_exercises.sh
 
       - name: Diff
         run: |
