--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.0.0
 
       - name: Fetch configlet
-        run: ./bin/fetch_configlet.sh
+        run: ./bin/fetch-configlet
 
       - name: Lint configlet
         run: ./bin/configlet lint
