--- a/rust-tooling/Cargo.toml
+++ b/rust-tooling/Cargo.toml
@@ -12,6 +12,6 @@ ignore = "0.4.20"
 inquire = "0.6.2"
 once_cell = "1.18.0"
 serde = { version = "1.0.188", features = ["derive"] }
-serde_json = "1.0.105"
+serde_json = { version = "1.0.105", features = ["preserve_order"] }
 tera = "1.19.1"
 uuid = { version = "1.4.1", features = ["v4"] }
