--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,7 @@
 .DS_Store
 **/target
 tmp
-bin/configlet
-bin/configlet.exe
-bin/exercise
-bin/exercise.exe
-bin/generator-utils/ngram
-bin/generator-utils/escape_double_quotes
+/bin/configlet
 exercises/*/*/Cargo.lock
 exercises/*/*/clippy.log
-canonical_data.json
 .vscode
