Adjust CI workflow to new directory structure

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -92,7 +92,7 @@ jobs:
           toolchain: stable
 
       - name: Run tests
-        run: cd rust-tooling && cargo test
+        run: cd rust-tooling/ci-tests && cargo test
 
   rustformat:
     name: Check Rust Formatting
