--- a/rust-tooling/models/Cargo.toml
+++ b/rust-tooling/models/Cargo.toml
@@ -11,5 +11,6 @@ ignore = "0.4.20"
 once_cell = "1.18.0"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = { version = "1.0.105", features = ["preserve_order"] }
+serde_repr = "0.1.17"
 utils = { version = "0.1.0", path = "../utils" }
 uuid = { version = "1.6.1", features = ["v4"] }
