Eliuds Eggs => Eliud's Eggs
[no important files changed]

--- a/config.json
+++ b/config.json
@@ -553,7 +553,7 @@
       },
       {
         "slug": "eliuds-eggs",
-        "name": "Eliuds Eggs",
+        "name": "Eliud's Eggs",
         "uuid": "2d738c77-8dde-437a-bf42-ed5542a414d1",
         "practices": [],
         "prerequisites": [],
